<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_dashboard">

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.chattingapp.ui.dashboard.DashboardFragment"
        android:label="@string/title_chat"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_friends"
        android:name="com.chattingapp.ui.friendlist.FriendListFragment"
        android:label="@string/title_friend"
        tools:layout="@layout/activity_friend_list" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.chattingapp.ui.settings.SettingsFragment"
        android:label="@string/title_setting"
        tools:layout="@layout/fragment_settings" />
</navigation>