<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:paddingHorizontal="40dp"
    android:paddingTop="50dp"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp">

            <ImageView
                android:id="@+id/backIcon"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/ic_back"
                android:contentDescription="@string/cd_back"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:padding="8dp"/>

            <TextView
                android:id="@+id/pageTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_change_password"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_centerInParent="true"
                android:textColor="@color/black"/>
            <!-- Sesuaikan styling teks lainnya -->

        </RelativeLayout>


        <TextView
            android:id="@+id/textInstructions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/forgot_password_instruction"
            android:textSize="12sp"
            android:textColor="@color/light_purple"
            android:layout_marginVertical="35dp"
            />

        <!-- Email -->
        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:textSize="14sp"
            android:inputType="textEmailAddress"
            android:autofillHints="emailAddress"
            android:backgroundTint="#40000000"
            android:layout_marginBottom="32dp" />

        <!-- Verification Button -->
        <Button
            android:id="@+id/buttonVerification"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:textSize="12sp"
            android:text="@string/action_send_verification_code"
            android:textAllCaps="false"
            android:fontFamily="@font/poppins_bold"
            android:backgroundTint="@color/light_purple"
            android:textColor="@color/white"
            android:layout_marginBottom="10dp" />

            <TextView
                android:id="@+id/textNoAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_no_account"
                android:textSize="14sp"
                android:textColor="#000000"
                android:layout_marginBottom="8dp" />
    </LinearLayout>
</ScrollView>
