<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:padding="40dp"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <!-- App Title -->
        <TextView
            android:id="@+id/appTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="32sp"
            android:textStyle="bold"
            android:fontFamily="@font/poppins_bold"
            android:textColor="@color/light_purple"
            android:layout_marginBottom="32dp" />

        <!-- Email -->
        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:textSize="14sp"
            android:inputType="textEmailAddress"
            android:autofillHints="emailAddress"
            android:backgroundTint="#40000000"
            android:layout_marginBottom="32dp" />

        <!-- Username -->
        <EditText
            android:id="@+id/editTextUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_username"
            android:textSize="14sp"
            android:inputType="text"
            android:autofillHints="username"
            android:backgroundTint="#40000000"
            android:layout_marginBottom="32dp" />

        <!-- DoB -->
        <EditText
            android:id="@+id/editTextDateOfBirth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_dob"
            android:textSize="14sp"
            android:inputType="none"
            android:focusable="false"
            android:clickable="true"
            android:backgroundTint="#40000000"
            android:layout_marginBottom="32dp"
            />

        <!-- Password -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginBottom="32dp">

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/hint_password"
                android:textSize="14sp"
                android:inputType="textPassword"
                android:autofillHints="password"
                android:backgroundTint="#40000000"/>

            <ImageView
                android:id="@+id/togglePasswordVisibility"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="8dp"
                android:src="@drawable/ic_visibility_off"
                android:contentDescription="@string/toggle_password_visibility"
                android:visibility="gone"/>
        </LinearLayout>

        <!-- Confirm Password -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginBottom="8dp">

            <EditText
                android:id="@+id/confirmTextPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/hint_confirm_pass"
                android:textSize="14sp"
                android:inputType="textPassword"
                android:autofillHints="newPassword"
                android:backgroundTint="#40000000"/>

            <ImageView
                android:id="@+id/toggleConfirmPasswordVisibility"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="8dp"
                android:src="@drawable/ic_visibility_off"
                android:contentDescription="@string/toggle_password_visibility"
                android:visibility="gone"/>
        </LinearLayout>

        <TextView
            android:id="@+id/alreadyHaveAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_already_have_account"
            android:textColor="@color/light_blue"
            android:textSize="12sp"
            android:layout_gravity="end"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp" />

        <!-- Register Button -->
        <Button
            android:id="@+id/buttonRegister"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:textSize="12sp"
            android:text="@string/app_register_button"
            android:textAllCaps="false"
            android:fontFamily="@font/poppins_bold"
            android:backgroundTint="@color/light_purple"
            android:textColor="@color/white"
            android:layout_marginBottom="30dp" />

        
    </LinearLayout>
</ScrollView>
