<?xml version="1.0" encoding="utf-8"?>
<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bottomNav"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="?android:attr/windowBackground">

    <RadioButton
        android:id="@+id/navigation_dashboard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:button="@null"
        android:drawableTop="@drawable/nav_ic_chat_bubble"
        android:gravity="center"
        android:paddingVertical="10dp"
        android:textColor="@color/bottom_nav_item_tint"
        android:text="@string/title_chat" />

    <RadioButton
        android:id="@+id/navigation_friends"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:button="@null"
        android:drawableTop="@drawable/nav_ic_people"
        android:gravity="center"
        android:paddingVertical="10dp"
        android:textColor="@color/bottom_nav_item_tint"
        android:text="@string/title_friend" />

    <RadioButton
        android:id="@+id/navigation_settings"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:button="@null"
        android:drawableTop="@drawable/nav_ic_gear"
        android:gravity="center"
        android:paddingVertical="10dp"
        android:textColor="@color/bottom_nav_item_tint"
        android:text="@string/title_setting" />

</RadioGroup>
