<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <!-- Fragment Container -->

    <!-- Bottom Navigation -->
    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <RadioGroup
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="?android:attr/windowBackground"
        android:checkedButton="@id/navigation_dashboard">

        <RadioButton
            android:id="@+id/navigation_dashboard"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:checked="true"
            android:drawableTop="@drawable/nav_ic_chat_bubble"
            android:gravity="center"
            android:paddingVertical="10dp"
            android:textColor="@color/bottom_nav_item_tint"
            android:text="@string/title_chat" />

        <RadioButton
            android:id="@+id/navigation_friends"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/nav_ic_people"
            android:gravity="center"
            android:paddingVertical="10dp"
            android:textColor="@color/bottom_nav_item_tint"
            android:text="@string/title_friend" />

        <RadioButton
            android:id="@+id/navigation_settings"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/nav_ic_gear"
            android:gravity="center"
            android:paddingVertical="10dp"
            android:textColor="@color/bottom_nav_item_tint"
            android:text="@string/title_setting" />
    </RadioGroup>

</LinearLayout>