<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:padding="40dp"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <!-- App Title -->
        <TextView
            android:id="@+id/appTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="MyApp"
            android:textSize="32sp"
            android:textStyle="bold"
            android:fontFamily="@font/poppins_bold"
            android:textColor="@color/light_purple"
            android:layout_marginBottom="72dp" />

        <!-- Email / Username -->
        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:textSize="14sp"
            android:inputType="textEmailAddress"
            android:backgroundTint="#40000000"
            android:layout_marginBottom="42dp" />

        <!-- Password -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:textSize="14sp"
                android:inputType="textPassword"
                android:backgroundTint="#40000000"
                android:paddingEnd="40dp"/>

            <ImageView
                android:id="@+id/togglePasswordVisibility"
                android:layout_width="14dp"
                android:layout_height="14dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="8dp"
                android:src="@drawable/ic_visibility_off"
                android:contentDescription="@string/toggle_password_visibility"
                android:visibility="gone"
                />
        </RelativeLayout>

        <!-- Forgot Password -->
        <TextView
            android:id="@+id/forgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_password_button"
            android:textColor="@color/light_blue"
            android:textSize="12sp"
            android:layout_gravity="end"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="15dp" />

        <!-- Login Button -->
        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:textSize="12sp"
            android:text="Masuk"
            android:textAllCaps="false"
            android:fontFamily="@font/poppins_bold"
            android:backgroundTint="@color/light_purple"
            android:textColor="@color/white"
            android:layout_marginBottom="49dp" />

        <!-- Divider -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginBottom="25dp">

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="#40000000" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="  Atau coba metode lain  "
                android:textSize="12sp"
                android:textColor="#40000000" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="#40000000" />
        </LinearLayout>

        <!-- Google Login Button -->
        <LinearLayout
            android:id="@+id/buttonGoogle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/bg_button_white"
            android:padding="12dp"
            android:gravity="center"
            android:layout_marginBottom="25dp"
            android:clickable="true"
            android:focusable="true">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_google_logo"
                android:layout_marginEnd="8dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Masuk dengan Google"
                android:textColor="#000000"
                android:textSize="14sp" />
        </LinearLayout>

        <!-- Register -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="12dp"
            android:gravity="center"
            android:layout_marginBottom="24dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Belum punya akun? "
                android:textColor="@color/black"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Daftar sekarang"
                android:textColor="@color/light_blue"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>